Typos, and readme update

--- a/Temp Page.html
+++ b/Temp Page.html
@@ -10,10 +10,12 @@
     <p>We are currently hard at work developing this page, to find out more about what teachabl is about continue reading below</p>
     <h2>About Teachabl</h2>
     <p>We are a new Edtech startup looking to revolutionize the way that teachers
-      search or, gather, and collate materials for usage in their classrooms.</p>
+      search for, gather, and collate materials for usage in their classrooms.</p>
     <p>We believe that it can be difficult to find currated, and well organized materials for the classroom.
       <br>Many websites are disorganized and it can be difficult to find the exact materials you need.
-      <br>We want to revolutionize this process and make searching for and gathering materials easier for the average teacher</p>
+      <br>We want to revolutionize this process and make searching for and gathering materials easier for the average teacher
+      <br>The founder has experience working in a classroom as a science teacher, and found that it can be difficult to find
+      <br>the materials you need for your classrom. </p>
     <h1>If you are interested in recieving updates about the project please put your information in the link <a href="https://forms.gle/CuzFCdtPFV8Sgssi9"> here</a></h1>
   </body>
 </html>
