--- a/Temp Page.html
+++ b/Temp Page.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome to Teachabl</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142576127-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-142576127-1');
+      </script>
+
   </head>
   <body>
     <h1>Welcome to Teachabl!!!</h1>
